--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		<style>
-			@import url('http://fonts.googleapis.com/earlyaccess/jejumyeongjo.css');
-			@import url('http://fonts.googleapis.com/earlyaccess/kopubbatang.css');
-			@import url('http://fonts.googleapis.com/earlyaccess/nanummyeongjo.css');
-			@import url('http://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css');
+			@import url('https://fonts.googleapis.com/earlyaccess/jejumyeongjo.css');
+			@import url('https://fonts.googleapis.com/earlyaccess/kopubbatang.css');
+			@import url('https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css');
+			@import url('https://cdn.jsdelivr.net/font-iropke-batang/1.2/font-iropke-batang.css');
 
+			body {
+				margin: 0;
+			}
 
 			.page {
 				position: absolute;
@@ -25,10 +28,7 @@
 
 				text-align: center;
 
-				// font-family: 'Jeju Myeongjo', serif;
-				// font-family: 'KoPub Batang', serif;
 				font-family: 'Nanum Myeongjo', serif;
-				// font-family: 'Iropke Batang', serif;
 				line-height: 100%;
 			}
 
