--- a/index.html
+++ b/index.html
@@ -46,20 +46,35 @@
 				font-size: 20px;
 				font-weight: normal;
 			}
+
+			.intro {
+				float: left;
+				width: 50%;
+			}
+
+			.solo-face {
+				width: 150px;
+				height: 150px;
+			}
 		</style>
 	</head>
 	<body>
-		<div class="page">
+		<div class="page" style="top: -10%;">
 			<div class="title">
 				<h1>은별 & 진혁</h1>
 				<h2>결혼합니다</h2>
 				<h3>2017. 07. 16</h3>
 			</div>
 		</div>
-		<div class="page" style="top: 100%;">
-			<h1>은별 & 진혁</h1>
-			<h2>결혼합니다</h2>
-			<h3>2017. 07. 16</h3>
+		<div class="page" style="top: 90%;">
+			<div class="intro">
+				<img class="solo-face" src="eb-solo.jpg">
+				<caption>뵤리</caption>
+			</div>
+			<div class="intro">
+				<img class="solo-face" src="jh-solo.jpg">
+				<caption>뇨기</caption>
+			</div>
 		</div>
 	</body>
 </html>
