--- a/index.html
+++ b/index.html
@@ -52,9 +52,32 @@
 				width: 50%;
 			}
 
+			.intro-header {
+				text-align: center;
+			}
+
+			.intro-header > h4 {
+				font-size: 20px;
+			}
+
 			.solo-face {
 				width: 150px;
 				height: 150px;
+
+				border-radius: 50%;
+			}
+
+			.intro-content {
+				font-size: 18px;
+				line-height: 32px;
+
+				text-align: center;
+			}
+
+			.intro-content > p {
+				display: inline-block;
+				text-align: left;
+				width: 80%;
 			}
 		</style>
 	</head>
@@ -68,12 +91,34 @@
 		</div>
 		<div class="page" style="top: 90%;">
 			<div class="intro">
-				<img class="solo-face" src="eb-solo.jpg">
-				<caption>뵤리</caption>
+				<div class="intro-header">
+					<img class="solo-face" src="eb-solo.jpg">
+					<h4>조은별</h4>
+				</div>
+				<div class="intro-content">
+					<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
+
+이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
+
+공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
+
+국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
+				</div>
 			</div>
 			<div class="intro">
-				<img class="solo-face" src="jh-solo.jpg">
-				<caption>뇨기</caption>
+				<div class="intro-header">
+					<img class="solo-face" src="jh-solo.jpg">
+					<h4>김진혁</h4>
+				</div>
+				<div class="intro-content">
+					<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
+
+이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
+
+공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
+
+국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
+				</div>
 			</div>
 		</div>
 	</body>
