--- a/index.html
+++ b/index.html
@@ -34,23 +34,27 @@
 			}
 
 			.title > h1 {
-				font-size: 28px;
+				font-size: 32px;
 				font-weight: normal;
 			}
 
 			.title > h2 {
-				font-size: 20px;
+				font-size: 24px;
 				font-weight: normal;
 			}
 
 			.title > h3 {
-				font-size: 20px;
+				font-size: 24px;
 				font-weight: normal;
 			}
 
+			.desc {
+				text-align: center;
+			}
+
 			.intro {
-				float: left;
-				width: 50%;
+				display: inline-block;
+				width: 49%;
 			}
 
 			.intro-header {
@@ -81,6 +85,36 @@
 				width: 80%;
 			}
 
+			.info {
+				text-align: center;
+
+				font-size: 18px;
+			}
+
+			.info h4 {
+				font-size: 20px;
+			}
+
+			.info .small-p {
+				font-size: 16px;
+			}
+
+			.time, .place, .bus {
+				margin-bottom: 50px;
+			}
+
+			.place {
+
+			}
+
+			.map {
+				display: inline-block;
+			}
+
+			.bus {
+
+			}
+
 			@media screen and (max-width: 720px) {
 				#daumRoughmapContainer1495783197103 {
 					display: none;
@@ -101,61 +135,69 @@
 		</style>
 	</head>
 	<body>
-		<div class="page" style="top: -10%;">
+		<div class="page" style="top: 0%;">
 			<div class="title">
 				<h1>은별 & 진혁</h1>
 				<h2>결혼합니다</h2>
 				<h3>2017. 07. 16</h3>
 			</div>
 		</div>
-		<div class="page" style="top: 90%;">
-			<div class="intro">
-				<div class="intro-header">
-					<img class="solo-face" src="eb-solo.jpg">
-					<h4>조은별</h4>
+		<div class="page" style="top: 100%;">
+			<div class="desc">
+				<div class="intro">
+					<div class="intro-header">
+						<img class="solo-face" src="eb-solo.jpg">
+						<h4>조은별</h4>
+						<p>멋진 하니사</p>
+					</div>
+					<div class="intro-content">
+						<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
+
+	이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
+
+	공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
+
+	국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
+					</div>
 				</div>
-				<div class="intro-content">
-					<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
+				<div class="intro">
+					<div class="intro-header">
+						<img class="solo-face" src="jh-solo.jpg">
+						<h4>김진혁</h4>
+						<p>예쁜 프로그래머</p>
+					</div>
+					<div class="intro-content">
+						<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
 
-이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
+	이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
 
-공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
+	공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
 
-국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
-				</div>
-			</div>
-			<div class="intro">
-				<div class="intro-header">
-					<img class="solo-face" src="jh-solo.jpg">
-					<h4>김진혁</h4>
-				</div>
-				<div class="intro-content">
-					<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
-
-이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
-
-공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
-
-국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
+	국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
+					</div>
 				</div>
 			</div>
 			<div class="info">
 				<div class="time">
 					<h4>시각</h4>
-					<p>2017년 7월 16일 낮 12시</p>
+					<p>2017년 7월 16일 (일) 낮 12시</p>
 					<p id="left-time-to-wedding"></p>
 				</div>
 				<div class="place">
 					<h4>장소</h4>
 					<p>호텔리베라 (서울) 3층 베르사이유 홀</p>
-					<p>서울특별시 강남구 영동대로 737 호텔리베라</p>
+					<div class="map">
+						<div id="daumRoughmapContainer1495783197103" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+						<div id="daumRoughmapContainer1495783272053" class="root_daum_roughmap root_daum_roughmap_landing"></div>
+					</div>
+					<p class="small-p">서울특별시 강남구 영동대로 737 호텔리베라</p>
 				</div>
-				<div id="daumRoughmapContainer1495783197103" class="root_daum_roughmap root_daum_roughmap_landing"></div>
-				<div id="daumRoughmapContainer1495783272053" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 				<div class="bus">
 					<h4>전세버스</h4>
-					<p>오전 8시 50분 KAIST 본교 창의학습관 앞 <a href="http://dmaps.kr/rdho">(지도)</a></p>
-					<p>오전 9시 10분 대전광역시 대덕구 오정동 한남오거리 <a href="http://dmaps.kr/4n7fs">(지도)</a></p>
+					<p>오전 8시 50분</p>
+					<p>KAIST 본교 창의학습관 앞 <a href="http://dmaps.kr/rdho">(지도)</a></p>
+					<p>오전 9시 10분</p>
+					<p>대전광역시 대덕구 오정동 한남오거리 <a href="http://dmaps.kr/4n7fs">(지도)</a></p>
 				</div>
 			</div>
 			<div class="share">
@@ -180,6 +222,28 @@
 				"mapWidth" : "320",
 				"mapHeight" : "200"
 			}).render();
+		</script>
+
+		<script>
+			function getParameterByName(name) {
+			    var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+			    return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+			}
+
+			var mode = getParameterByName('m');
+			var introContentElements = document.getElementsByClassName('intro-content');
+
+			switch (mode) {
+				case 'd':
+					break;
+				case 's':
+				default:
+					Array.prototype.map.call(introContentElements, function (elem) {
+						elem.style.display = 'none';
+					});
+
+					break;
+			}
 		</script>
 	</body>
 </html>
