--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="은별 & 진혁 결혼합니다">
 		<meta property="og:image" content="https://reniowood.github.io/wedding-invitation/images/og-image.jpg">
+		<meta property="og:image:width" content="500">
+		<meta property="og:image:height" content="500">
 		<meta property="og:description" content="2017년 7월 16일 12시 호텔리베라 3층 베르사이유홀"?
 
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
