--- a/index.html
+++ b/index.html
@@ -288,6 +288,10 @@
 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 		
+		<script>
+			$.mobile.loading().hide();
+		</script>
+
 		<script charset="UTF-8" class="daum_roughmap_loader_script" src="https://spi.maps.daum.net/imap/map_js_init/roughmapLoader.js"></script>
 
 		<script charset="UTF-8">
