--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 		<meta property="og:image" content="https://reniowood.github.io/wedding-invitation/images/og-image.jpg">
 		<meta property="og:image:width" content="500">
 		<meta property="og:image:height" content="500">
-		<meta property="og:description" content="2017년 7월 16일 12시 호텔리베라 3층 베르사이유홀"?
+		<meta property="og:description" content="2017년 7월 16일 12시 호텔리베라 3층 베르사이유홀">
 
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 
@@ -79,8 +79,9 @@
 			}
 
 			.slider .indicator {
-				position: relative;
-				top: -32px;
+				position: absolute;
+				width: 100%;
+				bottom: 16px;
 			}
 
 			.slider .indicator .btn-indicator {
