--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta property="og:url" content="https://reniowood.github.io/wedding-invitation/">
 		<meta property="og:title" content="은별 & 진혁 결혼합니다">
 		<meta property="og:image" content="https://reniowood.github.io/wedding-invitation/images/og-image.jpg">
 		<meta property="og:image:width" content="500">
