--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<meta property="og:description" content="2017년 7월 16일 12시 호텔리베라 3층 베르사이유홀">
 
 		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
 
 		<style>
 			@import url('https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css');
@@ -66,45 +67,9 @@
 				margin-bottom: 100px;
 			}
 
-			.slider {
-				position: relative;
-			}
-
-			.slider .images img {
-				vertical-align: middle;
-			}
-
-			.slider .swipe-overlay {
-				position: absolute;
-				top: 0%;
-				left: 50%;
-				transform: translate(-50%, 0%);
-
-				width: 500px;
-				height: 500px;
-			}
-
-			.slider .indicator {
-				position: absolute;
+			.swiper-container {
 				width: 100%;
-				bottom: 10px;
-			}
-
-			.slider .indicator .btn-indicator {
-				display: inline-block;
-				text-align: center;
-
-				width: 8px;
-				height: 8px;
-				margin: 0 2px;
-
-				border: 1px solid white;
-				border-radius: 50%;
-			}
-
-			.slider .indicator .btn-indicator.on {
-				background-color: white;
-			}
+			}      
 
 			#marrige {
 				margin-top: 100px;
@@ -184,12 +149,16 @@
 					display: block;
 				}
 
-				.slider .images img {
+				.swiper-slide img {
 					 width: 100%;
 				}
 
-				.swipe-overlay {
+				.swiper-button-white {
 					display: block;
+				}
+
+				.swiper-button-black {
+					display: none;
 				}
 			}
 
@@ -201,13 +170,17 @@
 					display: none;
 				}
 
-				.slider .images img {
+				.swiper-slide img {
 					 width: 500px;
 					 margin: 0 auto;
 				}
 
-				.swipe-overlay {
+				.swiper-button-white {
 					display: none;
+				}
+
+				.swiper-button-black {
+					display: block;
 				}
 			}
 		</style>
@@ -257,9 +230,48 @@
 			</div>
 			<div class="meet">
 				<p>2015년 3월부터</p>
-				<div class="slider">
-					<div class="images"></div>
-					<div class="indicator"></div>
+				<div class="swiper-container">
+					<div class="swiper-wrapper">
+						<div class="swiper-slide">
+							<img src="images/couple0.jpg" class="swiper-lazy">
+                			<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+						<div class="swiper-slide">
+							<img src="images/couple1.jpg" class="swiper-lazy">
+                			<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+						<div class="swiper-slide">
+							<img src="images/couple2.jpg" class="swiper-lazy">	
+                			<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+						<div class="swiper-slide">
+							<img src="images/couple3.jpg" class="swiper-lazy">
+                			<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+						<div class="swiper-slide">
+							<img src="images/couple4.jpg" class="swiper-lazy">
+                			<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+						<div class="swiper-slide">
+							<img src="images/couple5.jpg" class="swiper-lazy">
+							<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+						<div class="swiper-slide">
+							<img src="images/couple6.jpg" class="swiper-lazy">
+							<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+						<div class="swiper-slide">
+							<img src="images/couple7.jpg" class="swiper-lazy">
+							<div class="swiper-lazy-preloader swiper-lazy-preloader-white"></div>
+						</div>
+					</div>
+
+					<div class="swiper-pagination swiper-pagination-white"></div>
+					
+					<div class="swiper-button-prev swiper-button-white"></div>
+					<div class="swiper-button-prev swiper-button-black"></div>
+					<div class="swiper-button-next swiper-button-white"></div>
+					<div class="swiper-button-next swiper-button-black"></div>
 				</div>
 				<p>2년여의 만남 끝에</p>
 				
@@ -294,6 +306,7 @@
 
 		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
 		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
 		
 		<script>
 			$.mobile.loading().hide();
@@ -342,101 +355,18 @@
 		</script>
 
 		<script>
-			var sliderImages = [
-				"images/couple0.jpg",
-				"images/couple1.jpg",
-				"images/couple2.jpg",
-				"images/couple3.jpg",
-				"images/couple4.jpg",
-				"images/couple5.jpg",
-				"images/couple6.jpg",
-				"images/couple7.jpg"
-			];
-
-			function createImageElement(image) {
-				var elemImg = document.createElement('img');
-				$(elemImg).attr('src', image);
-
-				var elemOverlay = document.createElement('div');
-				$(elemOverlay).addClass('swipe-overlay');
-
-				var imgWidth = $(window).width();
-				$(elemOverlay).width(imgWidth);
-				$(elemOverlay).height(imgWidth);
-
-				var elem = document.createElement('div');
-				$(elem).css('display', 'none');
-				$(elem).append($(elemImg));
-				$(elem).append($(elemOverlay));
-
-				return $(elem);
-			}
-
-			function initImages() {
-				var $images = $('.images').eq(0);
-				var numImages = sliderImages.length;
-				for (var i=0; i<numImages; i+=1) {
-					var $image = createImageElement(sliderImages[i]);
-
-					$images.append($image);
-				}
-
-				return $images.children();
-			}
-
-			function turnOnSliderSwipe($images, $indicators) {
-				$images.find('.swipe-overlay').each(function (index) {
-					$(this).on('swipeleft', function () {
-						$images.eq(index).hide();
-						$indicators.eq(index).removeClass('on');
-						if ($images.eq(index).next().length) {
-							$images.eq(index).next().show();
-							$indicators.eq(index).next().addClass('on');
-						} else {
-							$images.eq(0).show();
-							$indicators.eq(0).addClass('on');
-						}
-					});
-
-					$(this).on('swiperight', function () {
-						$images.eq(index).hide();
-						$indicators.eq(index).removeClass('on');
-						if ($images.eq(index).prev().length) {
-							$images.eq(index).prev().show();
-							$indicators.eq(index).prev().addClass('on');
-						} else {
-							$images.eq($images.length - 1).show();
-							$indicators.eq($images.length - 1).addClass('on');
-						}
-					});
+			$(document).ready(function () {
+				var mySwiper = new Swiper('.swiper-container', {
+					direction: 'horizontal',
+					loop: true,
+					pagination: '.swiper-pagination',
+					nextButton: '.swiper-button-next',
+					prevButton: '.swiper-button-prev',
+        			paginationClickable: true,
+					preloadImages: false,
+        			lazyLoading: true
 				});
-			}
-
-			function addIndicator($images) {
-				var $indicator = $('.slider .indicator').eq(0);
-
-				for (var i=0; i<$images.size(); i+=1) {
-					var button = document.createElement('span');
-					$(button).addClass('btn-indicator');
-
-					$indicator.append($(button));
-				}
-
-				$indicator.children().first().addClass('on');
-
-				return $indicator.children();
-			}
-
-			function initSlider() {
-				var $images = initImages();
-
-				$indicators = addIndicator($images);
-				turnOnSliderSwipe($images, $indicators);
-
-				$images.eq(0).css('display', 'block');
-			}
-
-			initSlider();
+			});
 		</script>
 	</body>
 </html>
