--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		<meta property="og:image:height" content="500">
 		<meta property="og:description" content="2017년 7월 16일 12시 호텔리베라 3층 베르사이유홀">
 
-		<link rel="stylesheet" href="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
+		<link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
+		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
 
 		<style>
-			@import url('https://fonts.googleapis.com/earlyaccess/nanummyeongjo.css');
+			@import url('//fonts.googleapis.com/earlyaccess/nanummyeongjo.css');
 
 			body {
 				margin: 0;
@@ -129,32 +129,27 @@
 				margin-bottom: 50px;
 			}
 
-			.place {
-
-			}
-
 			.map {
 				display: inline-block;
 			}
 
-			.bus {
+			.share {
+				margin-bottom: 32px;
 
+				text-align: center;
+			}
+
+			#kakao-link-btn {
+				text-decoration: none;
 			}
 
 			@media screen and (max-width: 500px) {
 				#daumRoughmapContainer1495787349676 {
 					display: none;
 				}
-				#daumRoughmapContainer1495783272053 {
-					display: block;
-				}
 
 				.swiper-slide img {
 					 width: 100%;
-				}
-
-				.swiper-button-white {
-					display: block;
 				}
 
 				.swiper-button-black {
@@ -163,9 +158,6 @@
 			}
 
 			@media screen and (min-width: 500px) {
-				#daumRoughmapContainer1495787349676 {
-					display: block;
-				}
 				#daumRoughmapContainer1495783272053 {
 					display: none;
 				}
@@ -177,10 +169,6 @@
 
 				.swiper-button-white {
 					display: none;
-				}
-
-				.swiper-button-black {
-					display: block;
 				}
 			}
 		</style>
@@ -301,60 +289,78 @@
 				</div>
 			</div>
 			<div class="share">
+				<a id="kakao-link-btn" href="javascript:;">
+					<img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" class="share-icon">
+				</a>
 			</div>
 		</div>
 
-		<script src="https://code.jquery.com/jquery-1.11.1.min.js"></script>
-		<script src="https://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
+		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+		<script src="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
+		<script src="//cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
+		<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
+		<script class="daum_roughmap_loader_script" src="https://spi.maps.daum.net/imap/map_js_init/roughmapLoader.js"></script>
 		
 		<script>
-			$.mobile.loading().hide();
-		</script>
-
-		<script charset="UTF-8" class="daum_roughmap_loader_script" src="https://spi.maps.daum.net/imap/map_js_init/roughmapLoader.js"></script>
-
-		<script charset="UTF-8">
-			new daum.roughmap.Lander({
-				"timestamp" : "1495787349676",
-				"key" : "hv32",
-				"mapWidth" : "520",
-				"mapHeight" : "300"
-			}).render();
-		</script>
-
-		<script charset="UTF-8">
-			new daum.roughmap.Lander({
-				"timestamp" : "1495783272053",
-				"key" : "huyo",
-				"mapWidth" : "320",
-				"mapHeight" : "200"
-			}).render();
-		</script>
-
-		<script>
-			function getParameterByName(name) {
-			    var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
-			    return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+			function initKakaoSdk() {
+				Kakao.init('d2358ed3498fc001bc326830bda221a9');
 			}
 
-			var mode = getParameterByName('m');
-			var $introContentElements = $('.intro-content');
-
-			switch (mode) {
-				case 'd':
-					break;
-				case 's':
-				default:
-					$introContentElements.each(function () {
-						$(this).css('display', 'none');
-					});
-
-					break;
+			function hideLoadingMessage() {
+				$.mobile.loading().hide();
 			}
-		</script>
+			
+			function loadDaumMap() {
+				new daum.roughmap.Lander({
+					"timestamp" : "1495787349676",
+					"key" : "hv32",
+					"mapWidth" : "520",
+					"mapHeight" : "300"
+				}).render();
 
-		<script>
+				new daum.roughmap.Lander({
+					"timestamp" : "1495783272053",
+					"key" : "huyo",
+					"mapWidth" : "320",
+					"mapHeight" : "200"
+				}).render();
+			}
+
+			function setMode() {
+				function getParameterByName(name) {
+					var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
+					return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
+				}
+
+				var mode = getParameterByName('m');
+				var $introContentElements = $('.intro-content');
+
+				switch (mode) {
+					case 'd':
+						break;
+					case 's':
+					default:
+						$introContentElements.each(function () {
+							$(this).css('display', 'none');
+						});
+
+						break;
+				}
+			}
+
+			function createKakaoLinkButton() {
+				Kakao.Link.createScrapButton({
+					container: '#kakao-link-btn',
+					requestUrl: 'https://reniowood.github.io/wedding-invitation/'
+				});
+			}
+
+			initKakaoSdk();
+			hideLoadingMessage();
+			setMode();
+			loadDaumMap();
+			createKakaoLinkButton();
+
 			$(document).ready(function () {
 				var mySwiper = new Swiper('.swiper-container', {
 					direction: 'horizontal',
