카카오링크 모바일 url 추가

--- a/index.html
+++ b/index.html
@@ -359,15 +359,17 @@
 						description: '두 사람의 결혼식에 초대합니다',
 						imageUrl: 'https://reniowood.github.io/wedding-invitation/images/og-image.jpg',
 						link: {
-							webUrl: 'https://reniowood.github.io/wedding-invitation/'
+							webUrl: 'https://reniowood.github.io/wedding-invitation/',
+							mobileWebUrl: 'https://reniowood.github.io/wedding-invitation/'
 						}
 					},
 					buttons: [
 						{
-						title: '웹으로 보기',
-						link: {
-							webUrl: 'https://reniowood.github.io/wedding-invitation/'
-						}
+							title: '웹으로 보기',
+							link: {
+								webUrl: 'https://reniowood.github.io/wedding-invitation/',
+								mobileWebUrl: 'https://reniowood.github.io/wedding-invitation/'
+							}
 						}
 					]
 				});
