--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
 		<meta property="og:image:height" content="500">
 		<meta property="og:description" content="2017년 7월 16일 12시 호텔리베라 3층 베르사이유홀">
 
+		<title>은별 & 진혁 결혼합니다</title>
+
 		<link rel="stylesheet" href="//code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
 		<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
 
