카카오링크 공유메세지 버튼 문구 수정

--- a/index.html
+++ b/index.html
@@ -367,7 +367,7 @@
 					},
 					buttons: [
 						{
-							title: '웹으로 보기',
+							title: '청첩장 보기',
 							link: {
 								webUrl: 'https://reniowood.github.io/wedding-invitation/',
 								mobileWebUrl: 'https://reniowood.github.io/wedding-invitation/'
