--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@
 					<div class="intro-header">
 						<img class="solo-face" src="images/eb-solo.jpg">
 						<h4>조은별</h4>
-						<p>멋진 하니사</p>
+						<p>멋진 한의사</p>
 					</div>
 					<div class="intro-content">
 						<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
@@ -272,7 +272,7 @@
 				</div>
 				<div class="place">
 					<h4>장소</h4>
-					<p>호텔리베라 (서울) 3층 베르사이유 홀</p>
+					<p>호텔리베라 청담 3층 베르사이유 홀</p>
 					<div class="map">
 						<div id="daumRoughmapContainer1495787349676" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 						<div id="daumRoughmapContainer1495783272053" class="root_daum_roughmap root_daum_roughmap_landing"></div>
