--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				height: 100%;
 			}
 
-			.title {
+			#title {
 				position: absolute;
 				top: 50%;
 				left: 50%;
@@ -38,101 +38,105 @@
 				line-height: 160%;
 			}
 
-			.title > h1 {
+			#title h1, #title h2, #title h3 {
+				font-weight: normal;
+			}
+
+			#title h1 {
 				min-width: 180px;
 				font-size: 32px;
-				font-weight: normal;
 			}
 
-			.title > h2 {
+			#title h2 {
 				font-size: 24px;
-				font-weight: normal;
 			}
 
-			.title > h3 {
+			#title h3 {
 				font-size: 24px;
-				font-weight: normal;
 			}
 
-			.desc {
+			#intro {
 				text-align: center;
 
 				margin-bottom: 100px;
 			}
 
-			.meet {
-				text-align: center;
-
-				margin-bottom: 100px;
-			}
-
-			.swiper-container {
-				width: 100%;
-			}      
-
-			#marrige {
-				margin-top: 100px;
-			}
-
-			.intro {
+			#intro .intro-person {
 				display: inline-block;
 				width: 49%;
 			}
 
-			.intro-header {
+			#intro .intro-person .intro-header {
 				text-align: center;
 			}
 
-			.intro-header > h4 {
-				font-size: 20px;
-
-				margin-bottom: 10px;
-			}
-
-			.solo-face {
+			#intro .intro-person .intro-header .intro-face {
 				width: 150px;
 				height: 150px;
 
 				border-radius: 50%;
 			}
 
-			.intro-content {
+			#intro .intro-person .intro-header .intro-name {
+				font-size: 20px;
+
+				margin-bottom: 10px;
+			}
+
+			#intro .intro-person .intro-content {
 				font-size: 18px;
 				line-height: 32px;
 
 				text-align: center;
 			}
 
-			.intro-content > p {
+			#intro .intro-person .intro-content p {
 				display: inline-block;
 				text-align: left;
 				width: 80%;
 			}
 
-			.info {
+			#meet {
+				text-align: center;
+
+				margin-bottom: 100px;
+			}
+
+			#slider {
+				width: 100%;
+			}      
+
+			#marriage {
+				margin-top: 100px;
+
+				font-size: 1.5em;
+				font-weight: bold;
+			}
+
+			#info {
 				text-align: center;
 
 				font-size: 18px;
 				line-height: 1.3;
 			}
 
-			.info h4 {
+			#info h4 {
 				font-size: 20px;
 			}
 
-			.info .small-p {
+			#info .small-p {
 				font-size: 16px;
 			}
 
-			.time, .place, .bus {
+			#info-time, #info-place, #info-bus {
 				margin-bottom: 50px;
 			}
 
-			.map {
+			#info-place-map {
 				display: inline-block;
 			}
 
-			.share {
+			#share {
 				margin-bottom: 32px;
 
 				text-align: center;
@@ -147,11 +151,11 @@
 					display: none;
 				}
 
-				.swiper-slide img {
+				#slider .swiper-wrapper .swiper-slide img {
 					 width: 100%;
 				}
 
-				.swiper-button-black {
+				#slider .swiper-button-black {
 					display: none;
 				}
 			}
@@ -161,12 +165,12 @@
 					display: none;
 				}
 
-				.swiper-slide img {
+				#slider .swiper-wrapper .swiper-slide img {
 					 width: 500px;
 					 margin: 0 auto;
 				}
 
-				.swiper-button-white {
+				#slider .swiper-button-white {
 					display: none;
 				}
 			}
@@ -174,18 +178,18 @@
 	</head>
 	<body>
 		<div class="page" style="top: 0%;">
-			<div class="title">
+			<div id="title">
 				<h1>은별 & 진혁</h1>
 				<h2>결혼합니다</h2>
 				<h3>2017. 07. 16</h3>
 			</div>
 		</div>
 		<div class="page" style="top: 100%;">
-			<div class="desc">
-				<div class="intro">
+			<div id="intro">
+				<div class="intro-person">
 					<div class="intro-header">
-						<img class="solo-face" src="images/eb-solo.jpg">
-						<h4>조은별</h4>
+						<img class="intro-face" src="images/eb-solo.jpg">
+						<h4 class="intro-name">조은별</h4>
 						<p>멋진 한의사</p>
 					</div>
 					<div class="intro-content">
@@ -198,10 +202,10 @@
 	국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
 					</div>
 				</div>
-				<div class="intro">
+				<div class="intro-person">
 					<div class="intro-header">
-						<img class="solo-face" src="images/jh-solo.jpg">
-						<h4>김진혁</h4>
+						<img class="intro-face" src="images/jh-solo.jpg">
+						<h4 class="intro-name">김진혁</h4>
 						<p>예쁜 프로그래머</p>
 					</div>
 					<div class="intro-content">
@@ -215,9 +219,9 @@
 					</div>
 				</div>
 			</div>
-			<div class="meet">
+			<div id="meet">
 				<p>2015년 3월부터</p>
-				<div class="swiper-container">
+				<div id="slider" class="swiper-container">
 					<div class="swiper-wrapper">
 						<div class="swiper-slide">
 							<img src="images/couple0.jpg" class="swiper-lazy">
@@ -260,26 +264,25 @@
 					<div class="swiper-button-next swiper-button-white"></div>
 					<div class="swiper-button-next swiper-button-black"></div>
 				</div>
-				<p>2년여의 만남 끝에</p>
-				
-				<h2 id="marrige">결&nbsp;&nbsp;혼&nbsp;&nbsp;합&nbsp;&nbsp;니&nbsp;&nbsp;다</h2>
+				<p>2년여의 만남 끝에</p>				
+				<span id="marriage">결&nbsp;&nbsp;혼&nbsp;&nbsp;합&nbsp;&nbsp;니&nbsp;&nbsp;다</span>
 			</div>
-			<div class="info">
-				<div class="time">
+			<div id="info">
+				<div id="info-time">
 					<h4>시각</h4>
 					<p>2017년 7월 16일 (일) 낮 12시</p>
 					<p id="left-time-to-wedding"></p>
 				</div>
-				<div class="place">
+				<div id="info-place">
 					<h4>장소</h4>
 					<p>호텔리베라 청담 3층 베르사이유 홀</p>
-					<div class="map">
+					<div id="info-place-map">
 						<div id="daumRoughmapContainer1495787349676" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 						<div id="daumRoughmapContainer1495783272053" class="root_daum_roughmap root_daum_roughmap_landing"></div>
 					</div>
 					<p class="small-p">서울특별시 강남구 영동대로 737 호텔리베라</p>
 				</div>
-				<div class="bus">
+				<div id="info-bus">
 					<h4>전세버스</h4>
 					<p>오전 8시 50분</p>
 					<p>KAIST 본교 창의학습관 앞 <a href="http://dmaps.kr/rdho">(지도)</a></p>
@@ -287,7 +290,7 @@
 					<p>대전광역시 대덕구 오정동 한남오거리 <a href="http://dmaps.kr/4n7fs">(지도)</a></p>
 				</div>
 			</div>
-			<div class="share">
+			<div id="share">
 				<a id="kakao-link-btn" href="javascript:;">
 					<img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" class="share-icon">
 				</a>
