js 로컬로 추가

--- a/index.html
+++ b/index.html
@@ -84,6 +84,8 @@
 			}
 
 			#intro .intro-person .intro-content {
+				display: none;
+
 				font-size: 18px;
 				line-height: 32px;
 
@@ -286,11 +288,13 @@
 					<h4>전세버스</h4>
 					<p>오전 8시 50분</p>
 					<p>KAIST 본교 창의학습관 앞 <a href="http://dmaps.kr/rdho">(지도)</a></p>
+					<br>
 					<p>오전 9시 10분</p>
 					<p>대전광역시 대덕구 오정동 한남오거리 <a href="http://dmaps.kr/4n7fs">(지도)</a></p>
 				</div>
 			</div>
 			<div id="share">
+				<h4>공유하기</h4>
 				<a id="kakao-link-btn" href="javascript:;">
 					<img src="//dev.kakao.com/assets/img/about/logos/kakaolink/kakaolink_btn_medium.png" class="share-icon">
 				</a>
@@ -301,8 +305,8 @@
 			<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/css/swiper.min.css">
 		</noscript>
 
-		<script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-		<script src="//cdnjs.cloudflare.com/ajax/libs/Swiper/3.4.2/js/swiper.jquery.min.js"></script>
+		<script src="js/jquery-1.11.1.min.js"></script>
+		<script src="js/swiper.jquery.min.js"></script>
 		<script src="//developers.kakao.com/sdk/js/kakao.min.js"></script>
 		<script class="daum_roughmap_loader_script" src="https://spi.maps.daum.net/imap/map_js_init/roughmapLoader.js"></script>
 		
@@ -352,13 +356,12 @@
 
 				switch (mode) {
 					case 'd':
+						$introContentElements.each(function () {
+							$(this).css('display', 'block');
+						});
 						break;
 					case 's':
 					default:
-						$introContentElements.each(function () {
-							$(this).css('display', 'none');
-						});
-
 						break;
 				}
 			}
