--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
 				height: 100%;
 			}
 
+			.for-detail {
+				display: none;
+			}
+
 			#title {
 				position: absolute;
 				top: 50%;
@@ -52,6 +56,7 @@
 			}
 
 			#title h3 {
+				min-width: 240px;
 				font-size: 24px;
 			}
 
@@ -84,8 +89,6 @@
 			}
 
 			#intro .intro-person .intro-content {
-				display: none;
-
 				font-size: 18px;
 				line-height: 32px;
 
@@ -200,7 +203,7 @@
 			<div id="title">
 				<h1>은별 & 진혁</h1>
 				<h2>결혼합니다</h2>
-				<h3>2017. 07. 16</h3>
+				<h3>2017. 07. 16 (일) 12시</h3>
 			</div>
 		</div>
 		<div class="page" style="top: 100%;">
@@ -208,11 +211,12 @@
 			<div id="intro">
 				<div class="intro-person">
 					<div class="intro-header">
+						<h4>조구상·김현경의 딸</h4>
 						<img class="intro-face" src="images/eb-solo.jpg">
 						<h4 class="intro-name">조은별</h4>
 						<p>멋진 한의사</p>
 					</div>
-					<div class="intro-content">
+					<div class="intro-content for-detail">
 						<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
 
 	이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
@@ -224,21 +228,22 @@
 				</div>
 				<div class="intro-person">
 					<div class="intro-header">
+						<h4>김병기·이미호의 아들</h4>
 						<img class="intro-face" src="images/jh-solo.jpg">
 						<h4 class="intro-name">김진혁</h4>
 						<p>예쁜 프로그래머</p>
 					</div>
-					<div class="intro-content">
-						<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
-
-	이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
-
-	공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
-
-	국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
+					<div class="intro-content for-detail">
+						<p>
+							초등학교 5학년 때 처음 프로그래밍을 접했지만 세상에 아직 프로그래밍보다 재미있는 것이 많아 해놓은 것은 별로 없습니다.
+							대학생 때 감독을 한 영화가 한 작품 있지만 마지막으로 영화를 본 지는 오래되었습니다.
+							맛있는 라거와 검정치마 노래를 좋아하며 (1집이 제일 맘에 듭니다) 매번 다이어트에 실패하지만 장기적으로는 감량중입니다.
+							이렇듯 20대를 썩 생산적으로 보내지 못했지만, 은별이를 만나 결혼을 결심한 것을 살면서 제일 잘한 일이라 생각하고 있습니다.
+						</p>
 					</div>
 				</div>
 			</div>
+			<hr class="heart-line for-detail">
 			<div id="meet">
 				<p>2015년 3월부터</p>
 				<div id="slider" class="swiper-container">
@@ -290,12 +295,12 @@
 			<hr class="heart-line">
 			<div id="info">
 				<div id="info-time">
-					<h4>시각</h4>
+					<h4>일&nbsp;&nbsp;시</h4>
 					<p>2017년 7월 16일 (일) 낮 12시</p>
 					<p id="left-time-to-wedding"></p>
 				</div>
 				<div id="info-place">
-					<h4>장소</h4>
+					<h4>장&nbsp;&nbsp;소</h4>
 					<p>호텔리베라 청담 3층 베르사이유 홀</p>
 					<div id="info-place-map">
 						<div id="daumRoughmapContainer1495787349676" class="root_daum_roughmap root_daum_roughmap_landing"></div>
@@ -372,11 +377,11 @@
 				}
 
 				var mode = getParameterByName('m');
-				var $introContentElements = $('.intro-content');
+				var $elementsForDetail = $('.for-detail');
 
 				switch (mode) {
 					case 'd':
-						$introContentElements.each(function () {
+						$elementsForDetail.each(function () {
 							$(this).css('display', 'block');
 						});
 						break;
