연락하기 수정

--- a/index.html
+++ b/index.html
@@ -101,9 +101,13 @@
 			}
 
 			#intro .intro-person .intro-content p {
+				margin: 0;
+
 				display: inline-block;
-				text-align: left;
 				width: 80%;
+
+				text-align: left;
+				text-indent: 18px;
 			}
 
 			#meet {
@@ -148,6 +152,10 @@
 
 			#call {
 				text-align: center;
+			}
+
+			#call h3 {
+				font-size: 20px;
 			}
 
 			#call .person {
@@ -250,13 +258,10 @@
 						<p>멋진 한의사</p>
 					</div>
 					<div class="intro-content for-detail">
-						<p>헌법재판소의 장은 국회의 동의를 얻어 재판관중에서 대통령이 임명한다. 평화통일정책의 수립에 관한 대통령의 자문에 응하기 위하여 민주평화통일자문회의를 둘 수 있다.
-
-	이 헌법공포 당시의 국회의원의 임기는 제1항에 의한 국회의 최초의 집회일 전일까지로 한다. 제2항과 제3항의 처분에 대하여는 법원에 제소할 수 없다.
-
-	공무원의 직무상 불법행위로 손해를 받은 국민은 법률이 정하는 바에 의하여 국가 또는 공공단체에 정당한 배상을 청구할 수 있다. 이 경우 공무원 자신의 책임은 면제되지 아니한다.
-
-	국무총리·국무위원 또는 정부위원은 국회나 그 위원회에 출석하여 국정처리상황을 보고하거나 의견을 진술하고 질문에 응답할 수 있다. 모든 국민은 인간다운 생활을 할 권리를 가진다.</p>
+						<p>어쩌다보니 한의학과에 진학하여 한의사가 되었지만, 한 우물을 파는 성격이 아닌 탓에 여기저기 관심사를 두고 지내왔습니다.
+						   아직은 환자의 한마디 한마디에 마음졸이는 초보의사입니다.
+						   악기를 다루고 노래를 하는것을 좋아합니다. 걷는 것을 좋아해 약 1000km 도보여행도 하였지만 아직 진혁이와 걷고싶은 길이 많습니다.</p>
+  						<p>진혁이는 저에게 잘 맞는 청바지처럼 편안함을 주는 사람입니다. 앞으로 살아가면서</p>
 					</div>
 				</div>
 				<div class="intro-person">
@@ -268,10 +273,12 @@
 					</div>
 					<div class="intro-content for-detail">
 						<p>
-							초등학교 5학년 때 처음 프로그래밍을 접했지만 세상에 아직 프로그래밍보다 재미있는 것이 많아 해놓은 것은 별로 없습니다.
-							대학생 때 감독을 한 영화가 한 작품 있지만 마지막으로 영화를 본 지는 오래되었습니다.
+							초등학교 때 프로그래밍을 접했지만 세상에 아직 프로그래밍보다 재미있는 것이 많아 해놓은 것은 별로 없습니다.
+							감독으로 영화도 한 편 찍었지만 마지막으로 영화를 본 지는 오래되었습니다.
 							맛있는 라거와 검정치마 노래를 좋아하며 (1집이 제일 맘에 듭니다) 매번 다이어트에 실패하지만 장기적으로는 감량중입니다.
-							이렇듯 20대를 썩 생산적으로 보내지 못했지만, 은별이를 만나 결혼을 결심한 것을 살면서 제일 잘한 일이라 생각하고 있습니다.
+						</p>
+						<p>
+							이렇듯 20대를 썩 생산적으로 보내지 못했지만, 은별이를 만나 결혼을 결심한 것을 제일 잘한 일이라 생각하고 있습니다.
 						</p>
 					</div>
 				</div>
@@ -352,46 +359,34 @@
 			</div>
 			<hr class="heart-line">
 			<div id="call">
-				<h4>연락하기</h4>
+				<h3>연락하기</h3>
 				<div class="half-column">
+					<h4>신부</h4>
 					<div class="person">
-						<span class="name">조은별</span>
-						<div>
-							<a href="tel:+821099000665"><img class="icon" src="images/phone.svg"></a>
-							<a href="sms:+821099000665"><img class="icon" src="images/chat.svg"></a>
-						</div>
-					</div>
-					<div class="person">
-						<span class="name">조구상</span>
+						<span>부</span>&nbsp;&nbsp;&nbsp;<span class="name">조구상</span>
 						<div>
 							<a href="tel:+821043180665"><img class="icon" src="images/phone.svg"></a>
 							<a href="sms:+821043180665"><img class="icon" src="images/chat.svg"></a>
 						</div>
 					</div>
 					<div class="person">
-						<span class="name">김현경</span>
+						<span>모</span>&nbsp;&nbsp;&nbsp;<span class="name">김현경</span>
 						<div>
 							<a href="tel:+821073680665"><img class="icon" src="images/phone.svg"></a>
 							<a href="sms:+821073680665"><img class="icon" src="images/chat.svg"></a>
 						</div>
 					</div>
 				</div><div class="half-column">
+					<h4>신랑</h4>
 					<div class="person">
-						<span class="name">김진혁</span>
-						<div>
-							<a href="tel:+821099315361"><img class="icon" src="images/phone.svg"></a>
-							<a href="sms:+821099315361"><img class="icon" src="images/chat.svg"></a>
-						</div>
-					</div>
-					<div class="person">
-						<span class="name">김병기</span>
+						<span>부</span>&nbsp;&nbsp;&nbsp;<span class="name">김병기</span>
 						<div>
 							<a href="tel:+821084245361"><img class="icon" src="images/phone.svg"></a>
 							<a href="sms:+821084245361"><img class="icon" src="images/chat.svg"></a>
 						</div>
 					</div>
 					<div class="person">
-						<span class="name">이미호</span>
+						<span>모</span>&nbsp;&nbsp;&nbsp;<span class="name">이미호</span>
 						<div>
 							<a href="tel:+821054285361"><img class="icon" src="images/phone.svg"></a>
 							<a href="sms:+821054285361"><img class="icon" src="images/chat.svg"></a>
@@ -455,6 +450,18 @@
 				}).render();
 			}
 
+			function setElementsForDetail() {
+				$('.for-detail').each(function () {
+					$(this).css('display', 'block');
+				});
+
+				$('#intro .intro-person').css({
+					'width': '100%',
+					'margin-bottom': '25px'
+				});
+				$('#call').hide();
+			}
+
 			function setMode() {
 				function getParameterByName(name) {
 					var match = RegExp('[?&]' + name + '=([^&]*)').exec(window.location.search);
@@ -462,13 +469,10 @@
 				}
 
 				var mode = getParameterByName('m');
-				var $elementsForDetail = $('.for-detail');
 
 				switch (mode) {
 					case 'd':
-						$elementsForDetail.each(function () {
-							$(this).css('display', 'block');
-						});
+						setElementsForDetail();
 						break;
 					case 's':
 					default:
