은별 내용 추가

--- a/index.html
+++ b/index.html
@@ -269,8 +269,8 @@
 					<div class="intro-content for-detail">
 						<p>어쩌다보니 한의학과에 진학하여 한의사가 되었지만, 한 우물을 파는 성격이 아닌 탓에 여기저기 관심사를 두고 지내왔습니다.
 						   아직은 환자의 한마디 한마디에 마음졸이는 초보의사입니다.
-						   악기를 다루고 노래를 하는것을 좋아합니다. 걷는 것을 좋아해 약 1000km 도보여행도 하였지만 아직 진혁이와 걷고싶은 길이 많습니다.</p>
-  						<p>진혁이는 저에게 잘 맞는 청바지처럼 편안함을 주는 사람입니다. 앞으로 살아가면서</p>
+						   악기를 다루고 노래 하는 것을 좋아합니다. 걷는 것을 좋아해 약 1000km 도보여행도 하였지만 아직 진혁이와 걷고싶은 길이 많습니다.</p>
+  						<p>저에게 진혁이는 잘 맞는 청바지처럼 편안한 사람입니다. 앞으로 살아가면서 함께 나눌 이야기들이 기다려집니다.</p>
 					</div>
 				</div>
 				<div class="intro-person">
