mode 관련 코드 수정

--- a/index.html
+++ b/index.html
@@ -474,9 +474,9 @@
 					return match && decodeURIComponent(match[1].replace(/\+/g, ' '));
 				}
 
-				var mode = getParameterByName('m');
+				window.mode = getParameterByName('m');
 
-				switch (mode) {
+				switch (window.mode) {
 					case 'd':
 						setElementsForDetail();
 						break;
@@ -487,6 +487,8 @@
 			}
 
 			function createKakaoLinkButton() {
+				var linkUrl = 'https://reniowood.github.io/wedding-invitation/' + (window.mode === 'd' ? '?m=d' : '');
+				
 				Kakao.Link.createDefaultButton({
 					container: '#kakao-link-btn',
 					objectType: 'location',
@@ -495,18 +497,18 @@
 					content: {
 						title: '은별 & 진혁 결혼합니다',
 						description: '두 사람의 결혼식에 초대합니다',
-						imageUrl: 'https://reniowood.github.io/wedding-invitation/images/og-image.jpg',
+						imageUrl: 'https://reniowood.github.io/wedding-invitation/images/og-image2.jpg',
 						link: {
-							webUrl: 'https://reniowood.github.io/wedding-invitation/',
-							mobileWebUrl: 'https://reniowood.github.io/wedding-invitation/'
+							webUrl: linkUrl,
+							mobileWebUrl: linkUrl
 						}
 					},
 					buttons: [
 						{
 							title: '청첩장 보기',
 							link: {
-								webUrl: 'https://reniowood.github.io/wedding-invitation/',
-								mobileWebUrl: 'https://reniowood.github.io/wedding-invitation/'
+								webUrl: linkUrl,
+								mobileWebUrl: linkUrl
 							}
 						}
 					]
