전화번호 +82 제거

--- a/index.html
+++ b/index.html
@@ -374,15 +374,15 @@
 					<div class="person">
 						<span>부</span>&nbsp;&nbsp;&nbsp;<span class="name">조구상</span>
 						<div>
-							<a href="tel:+821043180665"><img class="icon" src="images/phone.svg"></a>
-							<a href="sms:+821043180665"><img class="icon" src="images/chat.svg"></a>
+							<a href="tel:01043180665"><img class="icon" src="images/phone.svg"></a>
+							<a href="sms:01043180665"><img class="icon" src="images/chat.svg"></a>
 						</div>
 					</div>
 					<div class="person">
 						<span>모</span>&nbsp;&nbsp;&nbsp;<span class="name">김현경</span>
 						<div>
-							<a href="tel:+821073680665"><img class="icon" src="images/phone.svg"></a>
-							<a href="sms:+821073680665"><img class="icon" src="images/chat.svg"></a>
+							<a href="tel:01073680665"><img class="icon" src="images/phone.svg"></a>
+							<a href="sms:01073680665"><img class="icon" src="images/chat.svg"></a>
 						</div>
 					</div>
 				</div><div class="half-column">
@@ -390,15 +390,15 @@
 					<div class="person">
 						<span>부</span>&nbsp;&nbsp;&nbsp;<span class="name">김병기</span>
 						<div>
-							<a href="tel:+821084245361"><img class="icon" src="images/phone.svg"></a>
-							<a href="sms:+821084245361"><img class="icon" src="images/chat.svg"></a>
+							<a href="tel:01084245361"><img class="icon" src="images/phone.svg"></a>
+							<a href="sms:01084245361"><img class="icon" src="images/chat.svg"></a>
 						</div>
 					</div>
 					<div class="person">
 						<span>모</span>&nbsp;&nbsp;&nbsp;<span class="name">이미호</span>
 						<div>
-							<a href="tel:+821054285361"><img class="icon" src="images/phone.svg"></a>
-							<a href="sms:+821054285361"><img class="icon" src="images/chat.svg"></a>
+							<a href="tel:01054285361"><img class="icon" src="images/phone.svg"></a>
+							<a href="sms:01054285361"><img class="icon" src="images/chat.svg"></a>
 						</div>
 					</div>
 				</div>
