자세한 버전 부모님 이름 제거

--- a/index.html
+++ b/index.html
@@ -466,6 +466,7 @@
 
 				$('#intro .intro-person').addClass('for-detail');
 				$('#call').hide();
+				$('.intro-parent-name').hide();
 			}
 
 			function setMode() {
