2단 표시할 때 높이 맞지 않는 문제 수정

--- a/index.html
+++ b/index.html
@@ -71,11 +71,6 @@
 				margin-bottom: 25px;
 			}
 
-			#intro .intro-person {
-				display: inline-block;
-				width: 49%;
-			}
-
 			#intro .intro-person .intro-header {
 				text-align: center;
 			}
@@ -216,9 +211,10 @@
 
 				#slider .swiper-button-black {
 					display: none;
-				}				
+				}
 
 				#intro .intro-person.for-detail {
+					display: block;
 					width: 100%;
 					margin-bottom: 25px;
 				}
@@ -243,7 +239,7 @@
 				}
 
 				#intro .intro-person.for-detail {
-					width: 49%;
+					display: table-cell;
 				}
 			}
 		</style>
